# open-vibe

./: .eslintrc.format.cjs  .gitignore  AGENTS.md  LICENSE  README.md  README.zh-CN.md  REMOTE_BACKEND_POC.md  flake.nix  package-lock.json  package.json  postcss.config.mjs  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
bridge/: happy-bridge.js
docs/: changelog.html  index.html  styles.css
scripts/: macos-fix-openssl.sh  publish.ps1  sync-moltis-telegram-menu.ps1
src/: App.tsx  AppPreview.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: codex.rs  codex_config.rs  codex_home.rs  dictation.rs  dictation_windows.rs  event_sink.rs  file_io.rs  file_ops.rs  file_policy.rs  files.rs  git.rs  git_utils.rs  happy_bridge.rs  lib.rs  local_usage.rs  main.rs  menu.rs  moltis.rs  nanobot_bridge.rs  nanobot_bridge_daemon.rs  nanobot_integration.rs  prompts.rs  remote_backend.rs  settings.rs  state.rs  storage.rs  terminal.rs  types.rs  utils.rs
src-tauri/src/backend/: app_server.rs  events.rs
src-tauri/src/workspaces/: commands.rs  files.rs  git.rs  macos.rs  settings.rs  tests.rs  worktree.rs
src/components/: app-sidebar.tsx  nav-user.tsx  team-switcher.tsx
src/components/ui/: breadcrumb.tsx  card.tsx  chart.tsx  dialog.tsx  popover.tsx  select.tsx  sidebar.tsx  switch.tsx  tabs.tsx  textarea.tsx
src/features/about/components/: AboutView.tsx
src/features/app/: constants.ts
src/features/app/components/: AppLayout.tsx  DebugErrorBoundary.tsx  EmojiMartPicker.tsx  LaunchScriptButton.tsx  MainHeader.tsx  MainHeaderActions.tsx  MainTopbar.tsx  NanobotStatusCard.tsx  OpenAppMenu.tsx  PaneErrorBoundary.test.tsx  PaneErrorBoundary.tsx  PinnedThreadList.tsx  (+19 more)
src/hooks/: use-mobile.ts
src/i18n/: index.tsx
src/services/: events.ts  tauri.test.ts  tauri.ts
src/styles/: base.css  buttons.css  composer.css  debug.css  detached-tab.css  diff-viewer.css  diff.css  globals.css  home.css  main.css  messages.css  shadcn-theme.css  sidebar.css  terminal.css  theme-blue.css  theme-green.css  theme-orange.css  theme-red.css  theme-rose.css  theme-violet.css  theme-yellow.css  thread-tabs.css  workspace-home.css  yunyi-card.css
src/test/: vitest.setup.ts
src/utils/: commandText.ts  gitErrors.ts  notificationSoundDefaults.ts  notificationSoundSources.ts  notificationSounds.ts  platform.ts  threadItems.test.ts  threadItems.ts
(+106 files in other folders)
